# AdbSocks5

./: .gitignore  README.md  THIRD_PARTY.md
android/: README.md  gradle.properties  settings.gradle.kts  signing.properties.example
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: tun2socks_jni.c
android/app/src/main/java/com/proxy/: MainActivity.kt  SocksVpnService.kt  UdpgwSocks5Bridge.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
scripts/: build-native.ps1
sdk/: README.md
sdk/java/: .gitignore  README.md  build.gradle  settings.gradle
sdk/java/examples/: Quickstart.java
sdk/java/src/main/java/com/adbsocks5/: Adb.java  AdbSocks5Cli.java  AdbSocks5Client.java  AdbSocks5Exception.java  Apk.java  Device.java  Exceptions.java  ProxyConfig.java
sdk/python/: README.md  pyproject.toml
sdk/python/adbsocks5/: __init__.py  adb.py  apk.py  cli.py  client.py  errors.py  proxy.py
sdk/python/examples/: quickstart.py
