[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adbsocks5"
version = "0.1.0"
description = "Python SDK to route an ADB-connected Android device through a SOCKS5 proxy via the headless ADB SOCKS5 VPN app."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Unlicense-pending" }
authors = [{ name = "AdbSocks5" }]
keywords = ["adb", "android", "socks5", "proxy", "vpn", "tun2socks"]
dependencies = []

[project.urls]
Homepage = "https://github.com/LasRom/AdbSocks5"
Repository = "https://github.com/LasRom/AdbSocks5"

[project.scripts]
adbsocks5 = "adbsocks5.cli:main"

[tool.setuptools.packages.find]
include = ["adbsocks5*"]
